--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "nodemon --inspect dist/index.js",
     "watch": "tsc -w",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "nodemon dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/jest": "^29.5.5",
+    "@types/supertest": "^2.0.12",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
